--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>My name is Lmao</h2>
+    <h2>Welcome to myWebSite</h2>
     <h3>How are you?</h3>
 </body>
