--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <h2>Welcome to myWebSite</h2>
-    <h3>How are you?</h3>
     <img src="2.png.jpg"/>
+    <b>Ui Design</b>
 </body>
