add nuad cat name

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,3 +11,8 @@
     <img src="2.png.jpg"/>
     <b>Ui Design</b>
 </body>
+<body>
+    <h3>
+        This is My Cat his name "Nuad"
+    </h3>
+</body>
